--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/js4-me/nyc-school#readme",
   "dependencies": {
-    "sass": "^1.58.0",
-    "typescript": "^4.9.5"
+    "boxicons": "^2.1.4"
   }
 }
